--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,14 +1,14 @@
 #work {
   width: 100%;
   height: 100vh;
-  padding: 0rem $p;
+  padding: 0rem;
   > h2 {
     font: 700 2.5rem $text2;
     width: fit-content;
     border-bottom: 1px solid $color6_1;
     padding: 0.5rem;
     margin: auto;
-    margin-top: 8rem;
+    margin-top: 0rem;
   }
 
   > section {
